[gd_scene load_steps=2 format=2]

[ext_resource path="res://bullet/homing_bullet.gd" type="Script" id=1]

[node name="bullet" type="RigidBody2D"]
collision_layer = 8
collision_mask = 17
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]

[node name="collision" type="CollisionShape2D" parent="."]

[node name="particles" type="Particles2D" parent="."]
show_behind_parent = true
local_coords = false

[node name="lifetime" type="Timer" parent="."]
one_shot = true

[node name="redirect" type="Tween" parent="."]
[connection signal="body_entered" from="." to="." method="_on_bullet_body_entered"]
[connection signal="animation_finished" from="sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="timeout" from="lifetime" to="." method="_on_lifetime_timeout"]
[connection signal="tween_all_completed" from="redirect" to="." method="_on_redirect_tween_all_completed"]
